--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="tB9u8wUDnMPh12yhU0pSgnYFCn5nX9K3e6LGqcWkoMA" />
     <title>Nexus Technologies</title>
     <style>
         :root {
