--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="tB9u8wUDnMPh12yhU0pSgnYFCn5nX9K3e6LGqcWkoMA" />
+    <meta name="description" content="Conheça a Nexus, a nova geração de tecnologia. Explore nossos celulares, óculos AR e muito mais.">
+    <meta name="keywords" content="Nexus, nexus, inteligência artificial, Big Tech, tecnologia de ultima geraçao,tecnologia, celular, AR, óculos inteligentes, inovação, Orbity Phone X EX, Orbity AR Plus">
     <title>Nexus Technologies</title>
     <style>
         :root {
